log
Thu 25 Apr 2024 12:50:59 AM UTC: 
 tests:  0|6
total_score: 0/70
234381a
Thu 25 Apr 2024 12:58:43 AM UTC: 
 hashmap.c | 46 ++++++++++++++--------------------------------
 1 file changed, 14 insertions(+), 32 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
af9ece9
Thu 25 Apr 2024 01:00:48 AM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
f2d21e9
Thu 25 Apr 2024 01:02:07 AM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
22d533b
Thu 25 Apr 2024 01:03:20 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
75c9028
Thu 25 Apr 2024 01:03:33 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fd873a2
Thu 25 Apr 2024 01:03:53 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
073f3d6
